--- a/_posts/2020-12-26-my-second-post/my-second-post.Rmd
+++ b/_posts/2020-12-26-my-second-post/my-second-post.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "The history of mathematical finance"
 description: |
-  From 1880 to 1977
+  From 1880 to 1970
 author:
   - name: Kisun Yoon
     url: https://www.linkedin.com/in/kisun-yoon-quant/
@@ -11,7 +11,15 @@ output:
     self_contained: false
     toc: TRUE
     toc_depth: 3
-    #toc_float: TRUE
+  #html_document:
+  #  toc: true
+  #  toc_depth: 2
+  #  toc_float: true
+  #  number_sections: true
+  #  theme: cosmo
+categories:
+  - Math
+  - History
 ---
 
 
@@ -21,6 +29,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 
 # Louise Bachelier
+
+한글은 어떤가
 The history of stochastic integration and the modelling of risky asset prices both
 begin with Brownian motion, so let us begin there too. The earliest attempts to
 model Brownian motion mathematically can be traced to three sources, each of
@@ -73,4 +83,31 @@ multiple integral, but it was not what is known today as the “Multiple Wiener 
 indeed, it was K. Itˆo, in 1951, when trying to understand Wiener’s papers
 (not an easy task), who refined and greatly improved Wiener’s ideas [36].
 
-
+# 우장춘
+Let us now turn to Einstein’s model. In modern terms, Einstein assumed that
+Brownian motion was a stochastic process with continuous paths, independent increments,
+and stationary Gaussian increments. He did not assume other reasonable
+properties (from the standpoint of physics), such as rectifiable paths. If he had
+assumed this last property, we now know his model would not have existed as a
+process. However, Einstein was unable to show that the process he proposed actually
+did exist as a mathematical object. This is understandable, since it was 1905,
+and the ideas of Borel and Lebesgue constructing measure theory were developed
+only during the first decade of the twentieth century.
+In 1913 Daniell’s approach to measure theory (in which integrals are defined
+before measures) appeared, and it was these ideas, combined with Fourier series,
+that N. Wiener used in 1923 to construct Brownian motion, justifying after the fact
+Einstein’s approach. Indeed, Wiener used the ideas of measure theory to construct
+a measure on the path space of continuous functions, giving the canonical path projection
+process the distribution of what we now know as Brownian motion. Wiener
+and others proved many properties of the paths of Brownian motion, an activity
+that continues to this day. Two key properties relating to stochastic integration are
+that (1) the paths of Brownian motion have a non zero finite quadratic variation,
+such that on an interval (s, t), the quadratic variation is (t−s) and (2) the paths of
+Brownian motion have infinite variation on compact time intervals, almost surely.
+The second property follows easily from the first. Note that if Einstein were to have
+assumed rectifiable paths, Wiener’s construction would have essentially proved the
+impossibility of such a model. In recognition of his work, his construction of Brownian
+motion is often referred to as the Wiener process. Wiener also constructed a
+multiple integral, but it was not what is known today as the “Multiple Wiener Integral”:
+indeed, it was K. Itˆo, in 1951, when trying to understand Wiener’s papers
+(not an easy task), who refined and greatly improved Wiener’s ideas [36].
